# magnum-core

./: .gitignore  CVE_allowlist.yaml  GEMINI.md  Makefile  README.md  VERSION_MANIFEST.md  docker-compose.override.yml  docker-compose.yml  heartbeat.py  pyproject.toml
.github/workflows/: ci.yml  jules_verification.yml  phase-gates.yml  supply-chain.yml
docs/adr/: 001-core-architecture.md
docs/architecture/: data-flow.md  degradation.md  security-model.md  topology.md
docs/runbooks/: deployment.md  incident-response.md  key-ceremony.md
evals/retrieval/: eval_retrieval.py
evals/security/: eval_injection.py
libs/forge_a2a/: pyproject.toml
libs/forge_retrieval/: pyproject.toml
libs/forge_security/: pyproject.toml
libs/forge_security/src/forge_security/: __init__.py  mtls.py  spiffe.py
libs/forge_security/src/forge_security/audit/: __init__.py  logger.py
libs/forge_security/src/forge_security/key_management/: __init__.py  ceremony.py  rotation.py
libs/forge_security/src/forge_security/manifest/: __init__.py  signer.py  verifier.py
libs/forge_security/src/forge_security/risk_engine/: __init__.py  classifier.py
libs/forge_storage/: pyproject.toml
libs/forge_telemetry/: pyproject.toml
libs/forge_telemetry/src/forge_telemetry/: __init__.py  correlation.py  metrics.py  tracing.py
policies/: openshell-policy.yaml  sampling_allowlist.yaml
policies/opa/: egress.rego  execution_gate.rego
reports_dc/: phase1_forge_api_report.md  phase2_sandbox_report.md  phase3_zvec_report.md
scripts/: gen-certs.sh  run-phase-gate.sh  sbom-generate.sh  setup-dev.sh
services/forge_api/: Dockerfile  pyproject.toml
services/forge_api/src/forge_api/: __init__.py  config.py  main.py
services/forge_api/src/forge_api/auth/: __init__.py  _audit.py  jwks_cache.py  oauth.py  token_binding.py
services/forge_api/src/forge_api/middleware/: mtls.py  telemetry.py
services/forge_api/src/forge_api/routes/: jobs.py  well_known.py
services/forge_api/tests/: test_auth.py  test_routes.py
services/graph_worker/: Dockerfile  pyproject.toml
services/graph_worker/src/graph_worker/: __init__.py  config.py  main.py
services/graph_worker/src/graph_worker/graph/: __init__.py  edges.py  nodes.py  state.py
services/graph_worker/src/graph_worker/idempotency/: __init__.py  reconciliation.py  registry.py
services/graph_worker/src/graph_worker/sampling/: __init__.py  allowlist.py  client.py  content_policy.py  limits.py
services/graph_worker/tests/: test_graph.py  test_idempotency.py  test_sampling.py
services/jcodemunch/: Dockerfile  pyproject.toml
services/jcodemunch/src/jcodemunch/: __init__.py  config.py  main.py
services/jcodemunch/src/jcodemunch/chunker/: __init__.py  ast_parser.py  chunking.py
services/jcodemunch/src/jcodemunch/signing/: __init__.py  verifier.py
services/jcodemunch/tests/: test_chunker.py
services/mcp_gateway/: Dockerfile  pyproject.toml
services/mcp_gateway/src/mcp_gateway/: __init__.py  config.py  main.py
services/mcp_gateway/src/mcp_gateway/caching/: __init__.py  provider_adapter.py
services/mcp_gateway/src/mcp_gateway/constrained_decoding/: __init__.py  validator.py
services/mcp_gateway/src/mcp_gateway/oauth/: __init__.py  token_issuer.py
services/mcp_gateway/src/mcp_gateway/provenance/: __init__.py  envelope.py  signer.py  verify_window.py
services/mcp_gateway/src/mcp_gateway/routing/: __init__.py  dispatcher.py
services/mcp_gateway/src/mcp_gateway/secrets/: __init__.py  jit_tokens.py
services/mcp_gateway/tests/: test_constrained.py  test_jit.py  test_provenance.py
services/sandbox/: Dockerfile  pyproject.toml
services/sandbox/src/sandbox/: __init__.py  config.py  jit.py  main.py  supply_chain.py
services/sandbox/src/sandbox/landlock/: __init__.py  enforcer.py
services/sandbox/src/sandbox/network/: __init__.py  proxy.py  ssrf_guard.py
services/sandbox/src/sandbox/opa/: __init__.py  evaluator.py
services/sandbox/tests/: test_config.py  test_enforcer.py  test_jit.py  test_landlock.py  test_proxy.py  test_ssrf.py  test_supply_chain.py
services/tg-gateway/: docker-compose.yml  main.py  requirements.txt
skills/magnum-files/: SKILL.md  file_ops.py
slm/: Dockerfile  config.yaml
slm/grammars/: tool_call.gbnf
tests/: conftest.py
tests/phase0/: test_dos_safety.py  test_env_baseline.py  test_retrieval_baseline.py  test_security_coverage.py
tests/phase1/: test_audit_log.py  test_constrained_decoding.py  test_jwt_correctness.py  test_key_ceremony_audit.py  test_manifest_verification.py  test_mtls_strict.py  test_oauth_binding.py  test_oauth_metadata.py  test_spiffe_rotation.py  test_tool_verification.py  test_zvec.py
tests/phase2/: test_container_supply_chain.py  test_jit_anti_replay.py  test_l7_allowlist.py  (+2 more)
(+34 files in other folders)
