[project]
name = "forge-telemetry"
version = "12.0.0"
description = "Forge Telemetry — OpenTelemetry Instrumentation & Metrics"
requires-python = ">= 3.12"
dependencies = [
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "prometheus-client>=0.21.0",
]
