[project]
name = "forge-jcodemunch"
version = "12.0.0"
description = "jCodeMunch — MCP Server for AST-Aware Semantic Chunking"
requires-python = ">= 3.12"

dependencies = [
    "tree-sitter>=0.22.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.uv.sources]
forge-security = { path = "../../libs/forge_security", editable = true }
forge-telemetry = { path = "../../libs/forge_telemetry", editable = true }
