[project]
name = "forge-mcp-gateway"
version = "12.0.0"
description = "MCP Gateway — OAuth 2.1, Provenance, Constrained Decoding"
requires-python = ">= 3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=43.0.0",
    "httpx>=0.27.0",
    "jsonschema>=4.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.uv.sources]
forge-security = { path = "../../libs/forge_security", editable = true }
forge-telemetry = { path = "../../libs/forge_telemetry", editable = true }
